@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  21 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Re-enabled emerge sync since new python patch fixes threading bug.
+
   19 Mar 2005; Preston Cody <codeman@gentoo.org>
   Temporarily disabled 'emerge sync' option due to python threading bug.
   Updated TODO list to show our progress towards Alpha!
