@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.93 2005/03/21 22:33:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.94 2005/03/21 23:00:33 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  21 Mar 2005; Preston Cody <codeman@gentoo.org>
+  took chroot out of grub_install command.
 
   21 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Changed chroot wrapper code in spawn() to write the wrapper the python way
